force-app/main/default/objects/Contact/fields/AbilityAccommodation__c.field-meta.xml
<CustomField>
    <fullName>AbilityAccommodation__c</fullName>
    <label>Ability Accommodation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fragrance free environment</fullName>
            </value>
            <value>
                <fullName>Quieter spaces</fullName>
            </value>
            <value>
                <fullName>Darker spaces/no bright or flashing lights</fullName>
            </value>
            <value>
                <fullName>Screen reader</fullName>
            </value>
            <value>
                <fullName>Closed captions</fullName>
            </value>
            <value>
                <fullName>American Sign Language</fullName>
            </value>
            <value>
                <fullName>Attention to food allergies</fullName>
            </value>
            <value>
                <fullName>Wheelchair/walker/scooter accessible spaces</fullName>
            </value>
            <value>
                <fullName>Seating/minimize standing or walking</fullName>
            </value>
            <value>
                <fullName>Large print</fullName>
            </value>
            <value>
                <fullName>Service animal</fullName>
            </value>
            <value>
                <fullName>None/no accommodation requested</fullName>
            </value>
            <value>
                <fullName>Prefer to self-describe</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>