force-app/main/default/objects/Contact/fields/AbilityStatus__c.field-meta.xml
<CustomField>
    <fullName>AbilityStatus__c</fullName>
    <label>Ability Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blind/Low vision</fullName>
            </value>
            <value>
                <fullName>Deaf/Hard of hearing</fullName>
            </value>
            <value>
                <fullName
                >Learning disability/cognitive processing disability</fullName>
                <label
                >Learning disability/cognitive processing disability</label>
            </value>
            <value>
                <fullName>Chronic medical illness</fullName>
            </value>
            <value>
                <fullName>Mental health condition</fullName>
            </value>
            <value>
                <fullName>Mobility/ambulatory difficulty</fullName>
            </value>
            <value>
                <fullName>Sensory processing disorder</fullName>
            </value>
            <value>
                <fullName>Intellectual disability</fullName>
            </value>
            <value>
                <fullName>None/do not identify with a disability</fullName>
            </value>
            <value>
                <fullName>Prefer to self-describe</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>