force-app/main/default/objects/Contact/fields/Address_EC__c.field-meta.xml
<CustomField>
    <fullName>Address_EC__c</fullName>
    <description>Address for their emergency contact</description>
    <label>Address (EC)</label>
    <type>TextArea</type>
</CustomField>