force-app/main/default/objects/Contact/fields/ADSiMApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>ADSiMApplicationReceived__c</fullName>
    <description
    >The date the most recent version of Assistance Dogs Set in Motion Application was uploaded</description>
    <label>Last ADSiM Application</label>
    <type>Date</type>
</CustomField>