force-app/main/default/objects/Contact/fields/ADSiMPreApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>ADSiMPreApplicationReceived__c</fullName>
    <description>The date the most recent version of Assistance Dogs Set in Motion Pre Application was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last ADSiM Pre Application</label>
    <type>Date</type>
</CustomField>