force-app/main/default/objects/Contact/fields/ADSiMProgAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>ADSiMProgAgreementReceived__c</fullName>
    <description
    >The date the most recent version of Assistance Dogs Set in Motion Program Agreement was uploaded</description>
    <label>Last ADSiM Program Agreement</label>
    <type>Date</type>
</CustomField>