force-app/main/default/objects/Contact/fields/Assigned_Volunteer_Roles__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Volunteer_Roles__c</fullName>
    <description
  >List of roles assigned to volunteer as part of onboarding</description>
    <label>Assigned Volunteer Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Operations- Master Docs - READ ONLY</fullName>
            </value>
            <value>
                <fullName>Operations- Financial</fullName>
            </value>
            <value>
                <fullName>Operations- Client</fullName>
            </value>
            <value>
                <fullName>Operations- Volunteer and Staff</fullName>
            </value>
            <value>
                <fullName>Operations- Trainer</fullName>
            </value>
            <value>
                <fullName>Board - READ ONLY</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Sensitive Info- Volunteer and Staff</fullName>
            </value>
            <value>
                <fullName>Sensitive Info- Trainer</fullName>
            </value>
            <value>
                <fullName>Sensitive Info- Board</fullName>
            </value>
            <value>
                <fullName>Active Projects- Academy</fullName>
            </value>
            <value>
                <fullName>Active Projects- ADI</fullName>
            </value>
            <value>
                <fullName>Active Projects- Branding and Marketing</fullName>
            </value>
            <value>
                <fullName>Active Projects- Client Certification</fullName>
            </value>
            <value>
                <fullName
        >Active Projects- Community Outreach and Education</fullName>
                <label>Active Projects- Community Outreach and Education</label>
            </value>
            <value>
                <fullName>Active Projects- Dog Availability</fullName>
            </value>
            <value>
                <fullName>Active Projects- Fund Development</fullName>
            </value>
            <value>
                <fullName
        >Active Projects- Governance, Compliance and Operations</fullName>
                <label
        >Active Projects- Governance, Compliance and Operations</label>
            </value>
            <value>
                <fullName>Active Projects- Research and Development</fullName>
            </value>
            <value>
                <fullName>Active Projects- Scholarships</fullName>
            </value>
            <value>
                <fullName>Active Projects- State Registration</fullName>
            </value>
            <value>
                <fullName
        >Active Projects- Team Facilitator Certification</fullName>
                <label>Active Projects- Team Facilitator Certification</label>
            </value>
            <value>
                <fullName>Active Projects- Technology Infrastructure</fullName>
            </value>
            <value>
                <fullName>Active Projects- Trainer Certification</fullName>
            </value>
            <value>
                <fullName
        >Active Projects- Volunteer Recruitment and Retention</fullName>
                <label
        >Active Projects- Volunteer Recruitment and Retention</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>