force-app/main/default/objects/Contact/fields/AvailableAsTsimTA__c.field-meta.xml
<CustomField>
    <fullName>AvailableAsTsimTA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Facilitator is available as a Teams Set In Motion Teacher Assistant</description>
    <label>Available as TSiM TA</label>
    <type>Checkbox</type>
</CustomField>