force-app/main/default/objects/Contact/fields/Background_Check_Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Latest_Date__c</fullName>
    <label>Background Check Latest Date</label>
    <type>Date</type>
</CustomField>