force-app/main/default/objects/Contact/fields/Background_check_latest_result__c.field-meta.xml
<CustomField>
    <fullName>Background_check_latest_result__c</fullName>
    <label>Background Check Latest Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>