force-app/main/default/objects/Contact/fields/Board_Member_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Member_Interview_Date__c</fullName>
    <label>Interview Date for Board</label>
    <type>Date</type>
</CustomField>