force-app/main/default/objects/Contact/fields/Board_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Board_Member_Status__c</fullName>
    <label>Board Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Preliminary Interview Setup</fullName>
            </value>
            <value>
                <fullName>Board Interview Committee Feedback Pending</fullName>
            </value>
            <value>
                <fullName>Not a good fit</fullName>
            </value>
            <value>
                <fullName>Board Interview Committee interview Setup</fullName>
            </value>
            <value>
                <fullName>Awaiting Board Approval</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Offered other roles</fullName>
            </value>
            <value>
                <fullName
        >Provisionally on boarded as volunteer until next board meeting</fullName>
                <label
        >Provisionally on boarded as volunteer until next board meeting</label>
            </value>
            <value>
                <fullName>Background Check In progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>