force-app/main/default/objects/Contact/fields/BoardAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>BoardAgreementReceived__c</fullName>
    <description
    >The date the most recent version of Board Agreement was uploaded</description>
    <label>Last Board Agreement</label>
    <type>Date</type>
</CustomField>