force-app/main/default/objects/Contact/fields/BoardApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>BoardApplicationReceived__c</fullName>
    <description
    >The date the most recent version of Board Application was uploaded</description>
    <label>Last Board Application</label>
    <type>Date</type>
</CustomField>