force-app/main/default/objects/Contact/fields/BoardCoIReceived__c.field-meta.xml
<CustomField>
    <fullName>BoardCoIReceived__c</fullName>
    <description
    >The date the most recent version of Board Conflict of Interest was uploaded</description>
    <label>Last Board Conflict of Interest</label>
    <type>Date</type>
</CustomField>