force-app/main/default/objects/Contact/fields/BoardContactFormReceived__c.field-meta.xml
<CustomField>
    <fullName>BoardContactFormReceived__c</fullName>
    <description
    >The date the most recent version of Board ContactForm was uploaded</description>
    <label>Last Board ContactForm</label>
    <type>Date</type>
</CustomField>