force-app/main/default/objects/Contact/fields/BoardMemberAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>BoardMemberAcceptedDate__c</fullName>
    <label>Board Member Accepted Date</label>
    <type>Date</type>
</CustomField>