force-app/main/default/objects/Contact/fields/BoardMemberStatus__c.field-meta.xml
<CustomField>
    <fullName>BoardMemberStatus__c</fullName>
    <label>Board Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Inquiry</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
           </value>
           <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>