force-app/main/default/objects/Contact/fields/BoardResumeReceived__c.field-meta.xml
<CustomField>
    <fullName>BoardResumeReceived__c</fullName>
    <description>The date the most recent version of Board Resume was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Board Resume</label>
    <type>Date</type>
</CustomField>