force-app/main/default/objects/Contact/fields/BoardTermValidUntil__c.field-meta.xml
<CustomField>
    <fullName>BoardTermValidUntil__c</fullName>
    <description>The date the Board Member Term is valid to</description>
    <label>Board Term Valid Until</label>
    <type>Date</type>
</CustomField>