force-app/main/default/objects/Contact/fields/BoardToNReceived__c.field-meta.xml
<CustomField>
    <fullName>BoardToNReceived__c</fullName>
    <description
    >The date the most recent version of Board Transmission of Notices was uploaded</description>
    <label>Last Board Transmission of Notices</label>
    <type>Date</type>
</CustomField>