force-app/main/default/objects/Contact/fields/CanvasSisId__c.field-meta.xml
<CustomField>
    <fullName>CanvasSisId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Canvas SIS Id</description>
    <externalId>true</externalId>
    <label>Canvas SIS ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>