force-app/main/default/objects/Contact/fields/CeuHours__c.field-meta.xml
<CustomField>
    <fullName>CeuHours__c</fullName>
    <description>Number of CEU hours earned since last certification, or number of hours earned if never certified</description>
    <inlineHelpText>Do not set this value, it is updated by a trigger</inlineHelpText>
    <label>CEU Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>