force-app/main/default/objects/Contact/fields/CeuStatus__c.field-meta.xml
<CustomField>
    <fullName>CEUStatus__c</fullName>
    <label>CEU Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>