force-app/main/default/objects/Contact/fields/Client_Team_Secondary_Certification__c.field-meta.xml
<CustomField>
    <fullName>Client_Team_Secondary_Certification__c</fullName>
    <label>Client Dog Team Secondary Certification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Certifications</valueSetName>
    </valueSet>
</CustomField>