force-app/main/default/objects/Contact/fields/ClientApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientApplicationReceived__c</fullName>
    <description
    >The date the most recent version of Client Application was uploaded</description>
    <label>Last Client Application</label>
    <type>Date</type>
</CustomField>