force-app/main/default/objects/Contact/fields/ClientApplicationVideoReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientApplicationVideoReceived__c</fullName>
    <description>The date the most recent version of a Client Application Video was uploaded</description>
    <label>Client Application Video Received</label>
    <type>Date</type>
</CustomField>