force-app/main/default/objects/Contact/fields/ClientCertAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientCertAgreementReceived__c</fullName>
    <description
    >The date the most recent version of Client Certification Agreement was uploaded</description>
    <label>Last Client Certification Agreement</label>
    <type>Date</type>
</CustomField>