force-app/main/default/objects/Contact/fields/ClientCertificationValidUntil__c.field-meta.xml
<CustomField>
    <fullName>ClientCertificationValidUntil__c</fullName>
    <description>Date that the client certification is valid until</description>
    <label>Client Certification Valid Until</label>
    <type>Date</type>
</CustomField>