force-app/main/default/objects/Contact/fields/ClientCGCFormReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientCGCFormReceived__c</fullName>
    <description>The date the most recent version of Client CGC Form was uploaded</description>
    <label>CGC Form</label>
    <type>Date</type>
</CustomField>