force-app/main/default/objects/Contact/fields/ClientContactFormReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientContactFormReceived__c</fullName>
    <description
    >The date the most recent version of Client ContactForm was uploaded</description>
    <label>Last Client ContactForm</label>
    <type>Date</type>
</CustomField>