force-app/main/default/objects/Contact/fields/ClientDog__c.field-meta.xml
<CustomField>
    <fullName>ClientDog__c</fullName>
    <description>Name of the Client&apos;s dog</description>
    <label>Client Dog</label>
    <length>128</length>
    <type>Text</type>
</CustomField>