force-app/main/default/objects/Contact/fields/ClientFacilitatorAvailability__c.field-meta.xml
<CustomField>
    <fullName>ClientFacilitatorAvailability__c</fullName>
    <description>Facilitator availability for the client</description>
    <label>Facilitator Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>