force-app/main/default/objects/Contact/fields/ClientInitialCertificationDate__c.field-meta.xml
<CustomField>
    <fullName>ClientInitialCertificationDate__c</fullName>
    <description>Date that the client was first certified.</description>
    <inlineHelpText>Derived from Team Initial Certification Date. Do not edit directly.</inlineHelpText>
    <label>Client Initial Certification Date</label>
    <type>Date</type>
</CustomField>