force-app/main/default/objects/Contact/fields/ClientLOMIReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientLOMIReceived__c</fullName>
    <description
    >The date the most recent version of Client LOMI was uploaded</description>
    <label>Last Client LOMI</label>
    <type>Date</type>
</CustomField>