force-app/main/default/objects/Contact/fields/ClientMedicalDevices__c.field-meta.xml
<CustomField>
    <fullName>ClientMedicalDevices__c</fullName>
    <label>Client Medical Devices/Accomodations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>