force-app/main/default/objects/Contact/fields/ClientProgAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientProgAgreementReceived__c</fullName>
    <description
    >The date the most recent version of Client Program Agreement was uploaded</description>
    <label>Last Client Program Agreement</label>
    <type>Date</type>
</CustomField>