force-app/main/default/objects/Contact/fields/ClientStatus__c.field-meta.xml
<CustomField>
    <fullName>ClientStatus__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <inlineHelpText>Derived from Team. Do not edit directly.</inlineHelpText>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Inquiry</fullName>
            </value>
            <value>
                <fullName>In ADSiM</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>In Training</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Certified-Hold</fullName>
            </value>
            <value>
                <fullName>Decertified</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>