force-app/main/default/objects/Contact/fields/ClientSurveyReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientSurveyReceived__c</fullName>
    <description
    >The date the most recent version of Client Certification Survey was uploaded</description>
    <label>Last Client Certification Survey</label>
    <type>Date</type>
</CustomField>