force-app/main/default/objects/Contact/fields/ClientValidUntil__c.field-meta.xml
<CustomField>
    <fullName>ClientValidUntil__c</fullName>
    <description>Date that the client certification is valid until</description>
    <label>Client Valid Until</label>
    <type>Date</type>
</CustomField>