force-app/main/default/objects/Contact/fields/ClientVAPWReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientVAPWReceived__c</fullName>
    <description
    >The date the most recent version of Client Veteran Paperwork was uploaded</description>
    <label>Last Client Veteran Paperwork</label>
    <type>Date</type>
</CustomField>