force-app/main/default/objects/Contact/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Place/person to contact this person</description>
    <inlineHelpText>Select Guardian to contact this person through their guardian, Home for personal email/phone</inlineHelpText>
    <label>Contact At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>