force-app/main/default/objects/Contact/fields/ContactFormReceived__c.field-meta.xml
<CustomField>
    <fullName>ContactFormReceived__c</fullName>
    <description>The date the most recent version of Contact Form was uploaded</description>
    <inlineHelpText>Set programmatically when online contact form is completed.</inlineHelpText>
    <label>Last Contact Form</label>
    <type>Date</type>
</CustomField>