force-app/main/default/objects/Contact/fields/Convicted_Of_Crime__c.field-meta.xml
<CustomField>
    <fullName>Convicted_Of_Crime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Conviction?</label>
    <type>Checkbox</type>
</CustomField>