force-app/main/default/objects/Contact/fields/Criminal_Conviction__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Conviction?</label>
    <type>Checkbox</type>
</CustomField>