force-app/main/default/objects/Contact/fields/Criminal_Conviction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction_Notes__c</fullName>
    <label>Criminal Conviction Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>