force-app/main/default/objects/Contact/fields/CriminalConviction__c.field-meta.xml
<CustomField>
    <fullName>CriminalConviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal Conviction?</label>
    <type>Checkbox</type>
</CustomField>