force-app/main/default/objects/Contact/fields/CriminalConvictionNotes__c.field-meta.xml
<CustomField>
    <fullName>CriminalConvictionNotes__c</fullName>
    <label>Criminal Conviction Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>