force-app/main/default/objects/Contact/fields/DateStarted__c.field-meta.xml
<CustomField>
    <fullName>DateStarted__c</fullName>
    <description>The date this contact started working with Atlas</description>
    <label>Date Started</label>
    <type>Date</type>
</CustomField>