force-app/main/default/objects/Contact/fields/Email_EC__c.field-meta.xml
<CustomField>
    <fullName>Email_EC__c</fullName>
    <description>Email for their emergency contact</description>
    <label>Email (EC)</label>
    <type>Email</type>
</CustomField>