force-app/main/default/objects/Contact/fields/EmailInclusion__c.field-meta.xml
<CustomField>
    <fullName>EmailInclusion__c</fullName>
    <label>Email Inclusion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seattle Client Meetups</fullName>
            </value>
            <value>
                <fullName>TSiM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>