force-app/main/default/objects/Contact/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>This is the name of an emergency contact</description>
    <label>Emergency Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>