force-app/main/default/objects/Contact/fields/Facilitator_Application_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Application_Receipt_Date__c</fullName>
    <label>Facilitator Application Receipt Date</label>
    <type>Date</type>
</CustomField>