force-app/main/default/objects/Contact/fields/Facilitator_Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Application_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilitator Application Received</label>
    <type>Checkbox</type>
</CustomField>