force-app/main/default/objects/Contact/fields/Facilitator_Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Interview_Notes__c</fullName>
    <label>Facilitator Interview Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>