force-app/main/default/objects/Contact/fields/Facilitator_Interview_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Interview_Start_Date_Time__c</fullName>
    <label>Facilitator Interview Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>