force-app/main/default/objects/Contact/fields/Facilitator_Onboarding_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Onboarding_Reminder_Date__c</fullName>
    <label>Facilitator Onboarding Reminder Date</label>
    <type>Date</type>
</CustomField>