force-app/main/default/objects/Contact/fields/Facilitator_Preliminary_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Preliminary_Interview_Date__c</fullName>
    <label>Facilitator Preliminary Interview Date</label>
    <type>DateTime</type>
</CustomField>