force-app/main/default/objects/Contact/fields/Facilitator_Provision_Details__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Provision_Details__c</fullName>
    <label>Facilitator provision details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>