force-app/main/default/objects/Contact/fields/Facilitator_Provisional_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Provisional_Agreement_Date__c</fullName>
    <label>Facilitator  Provisional Agreement Date</label>
    <type>Date</type>
</CustomField>