force-app/main/default/objects/Contact/fields/Facilitator_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Reminder_Date__c</fullName>
    <label>Facilitator Interview Date</label>
    <type>Date</type>
</CustomField>